# genpwd

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: update-wordlist.py
src/genpwd/: constants.py  genpwd.py  main.py  words.py
wordlist/: names.json  words.json
