[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genpwd"
description = "Simple CLI program that can generate very strong passwords"
version = "1.9.0"
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
authors = [{ name = "Phyo Wai Lin", email = "phyowailin2004@proton.me" }]
keywords = ["cli", "password", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.urls]
HomePage = "https://github.com/nureon22/genpwd"
Repository = "https://github.com/nureon22/genpwd.git"
Issues = "https://github.com/nureon22/genpwd/issues"

[project.scripts]
genpwd = "genpwd.main:main"
